--- a/css/styles.css
+++ b/css/styles.css
@@ -352,15 +352,18 @@ body {
 
 .footer-container {
   display: flex;
-  flex-direction: column;
-
   margin: 0 auto;
   padding: 0px 15px;
   width: 1200px;
 }
 
-.join {
-  display: inline-block;
+.join-container {
+  padding-top: 66px;
+  padding-left: 70px;
+}
+
+.address-container {
+  padding-top: 54px;
 }
 
 /* Portfolio */
@@ -575,6 +578,8 @@ body {
 .join-links {
   display: flex;
   list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 .join-links .list + .list {
