--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,7 @@ body {
 }
 
 .section-team-info .item {
+  background-color: var(--background-color-main);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
@@ -288,7 +289,9 @@ body {
 
 .team-all {
   padding-top: 30px;
-  padding-bottom: 16px;
+  padding-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .section-team .work {
@@ -352,18 +355,14 @@ body {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
   margin: 0 auto;
   padding: 0px 15px;
   width: 1200px;
 }
 
 .join-container {
-  padding-top: 66px;
-  padding-left: 70px;
-}
-
-.address-container {
-  padding-top: 54px;
+  margin-left: 70px;
 }
 
 /* Portfolio */
@@ -421,11 +420,6 @@ body {
   margin-bottom: 30px;
 }
 
-.filter-products .item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .filter-products .item:nth-child(3n) {
   margin-right: 0px;
 }
@@ -468,7 +462,14 @@ body {
 }
 
 .products-link {
+  display: inline-block;
   text-decoration: none;
+}
+
+.products-link:hover,
+.products-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* Vector */
@@ -478,20 +479,32 @@ body {
   fill: currentColor;
 }
 
-.features-icon {
-  padding: 25px 100px;
+.features-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
 }
 
-.features-text {
-  padding-top: 30px;
+.title-text {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--secondary-text-color);
 }
 
 .team-links {
   display: flex;
   list-style: none;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-bottom: 30px;
+  margin-top: 16px;
+  padding: 0px;
 }
 
 .team-links .list + .list {
@@ -519,8 +532,6 @@ body {
 
 .clients-links {
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .clients-icon {
@@ -530,11 +541,6 @@ body {
   fill: var(--icon-main-color);
   align-items: center;
   justify-content: center;
-
-  padding-left: 32px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-right: 32px;
 }
 
 .clients-links .list {
